<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_container_central_background"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        android:gravity="start|center"
        android:text="@string/please_enter_the_new_name"
        android:textColor="@color/black_text_color"
        android:textSize="@dimen/textSize"
        android:fontFamily="@font/tajawal_regular"/>

    <EditText
        android:id="@+id/et_new_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/drawable_edit_text_background"
        android:hint="@string/new_name"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/black_text_color"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/textSize"
        android:fontFamily="@font/tajawal_regular"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/b_save"
            style="@style/button_current_account_style"
            android:text="@string/save"
            android:layout_margin="10dp" />


        <Button
            android:id="@+id/b_dismiss"
            style="@style/button_new_account_style"
            android:text="@string/dismiss"
            android:layout_margin="10dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"/>


</LinearLayout>