<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_container_background_color">


    <RelativeLayout
        android:id="@+id/relative"
        style="@style/central_container_all_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relative2"
        android:background="@drawable/drawable_container_central_background">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tajawal_regular"
                android:gravity="center"
                android:paddingTop="@dimen/splashScreen_text_size"
                android:text="@string/app_name"
                android:textColor="@color/black_text_color"
                android:textSize="55dp" />


            <EditText
                android:id="@+id/et_email"
                style="@style/edit_text_style"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />


            <Button
                android:id="@+id/b_send_reset_link"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/drawable_button_background"
                android:enabled="false"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white_text_color"
                android:textSize="@dimen/textSize" />


        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relative2"
        style="@style/relative_container_for_two_buttons"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b_current_account"
                style="@style/button_current_account_style"
                android:text="@string/current_account"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/b_new_account"
                style="@style/button_new_account_style"
                android:text="@string/new_account"
                android:textColor="@color/black" />


        </LinearLayout>


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/m_progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="@color/white_text_color"
        android:visibility="gone" />


</RelativeLayout>