<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/searching_for"
                android:textColor="@color/black_text_color"
                android:textSize="@dimen/textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_sni3y"
            style="@style/edit_text_style"
            android:layout_below="@id/txt_account_type"
            android:layout_gravity="center"
            android:background="@drawable/text_view_drawable_background"
            android:drawableStart="@drawable/icon_profession"
            android:fontFamily="@font/tajawal_regular"
            android:hint="@string/shop_type"
            android:paddingStart="15dp"
            android:text="@string/app_name" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/home_fragment_margin_top"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lin_electrician"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/all_icon_and_views_press"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="@dimen/home_fragment_icon_width"
                    android:layout_height="@dimen/home_fragment_icon_height"
                    android:layout_gravity="center"
                    android:src="@drawable/profession_list_icon_electrician" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/tajawal_regular"
                    android:gravity="center"
                    android:text="@string/Electrician"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/textSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_mechanical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/all_icon_and_views_press"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="@dimen/home_fragment_icon_width"
                    android:layout_height="@dimen/home_fragment_icon_height"
                    android:layout_gravity="center"
                    android:src="@drawable/profession_list_icon_car_junk" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/tajawal_regular"
                    android:gravity="center"
                    android:text="@string/mechanical"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/textSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_plumbing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/all_icon_and_views_press"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/home_fragment_icon_width"
                    android:layout_height="@dimen/home_fragment_icon_height"
                    android:layout_gravity="center"
                    android:src="@drawable/profession_list_icon_plumber" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/tajawal_regular"
                    android:gravity="center"
                    android:text="@string/Plumber"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/textSize" />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@color/black_text_color" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_shops"
            style="@style/edit_text_style"
            android:layout_below="@id/txt_account_type"
            android:layout_gravity="center"
            android:background="@drawable/text_view_drawable_background"
            android:drawableStart="@drawable/icon_shop"
            android:fontFamily="@font/tajawal_regular"
            android:hint="@string/shop_type"
            android:paddingStart="15dp"
            android:text="@string/shop" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/home_fragment_margin_top"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lin_plumbing_tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/all_icon_and_views_press"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/home_fragment_icon_width"
                    android:layout_height="@dimen/home_fragment_icon_height"
                    android:layout_gravity="center"
                    android:src="@drawable/shop_list_icon_plumbing_tools" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/tajawal_regular"
                    android:gravity="center"
                    android:text="@string/plumbing_tools"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/textSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_electrical_tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/all_icon_and_views_press"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="@dimen/home_fragment_icon_width"
                    android:layout_height="@dimen/home_fragment_icon_height"
                    android:layout_gravity="center"
                    android:src="@drawable/shop_list_icon_shop_electrical_tools" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/tajawal_regular"
                    android:gravity="center"
                    android:text="@string/electrical_tools"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/textSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_car_wash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/all_icon_and_views_press"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/home_fragment_icon_width"
                    android:layout_height="@dimen/home_fragment_icon_height"
                    android:layout_gravity="center"
                    android:src="@drawable/shop_list_icon_car_wash" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/tajawal_regular"
                    android:gravity="center"
                    android:text="@string/car_wash"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/textSize" />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@color/black_text_color" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical" />


</LinearLayout>